# bam

./: .dockerignore  .env.docker.example  .env.local.example  .eslintrc.cjs  .gitignore  .gitmodules  Dockerfile  Dockerfile.coprocessor  NEXT_SPEC.md  POSTER_FOLLOW_UP.md  README.md  SPEC.md  commitlint.config.cjs  docker-compose.yml  fly.coprocessor.toml  fly.indexer.toml  fly.poster.toml  fly.reader.toml  fly.toml  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.claude/commands/: implement.md  plan.md  red-team.md  specify.md  tasks.md
.specify/memory/: anti-patterns.md  constitution.md
.specify/scripts/: create-new-feature.sh
.specify/templates/: plan-template.md  red-team-template.md  spec-template.md  tasks-template.md
apps/bam-blob-calc/: .env.local.example  README.md  package.json
apps/bam-blob-calc/src/app/: globals.css  layout.tsx  page.tsx
apps/bam-blob-calc/src/lib/: cost.ts
apps/bam-blog-demo/: .env.local.example  .gitignore  README.md  balance-of-power.html  galaxybrain.html  index.html  package.json  plinko.html  post-1.html  post-2.html  secure-llms.html  server.ts  societies.html  style.css  tsconfig.json  vercel.json  vite.config.ts
apps/bam-blog-demo/posts/: balance-of-power.html  galaxybrain.html  index.html  plinko.html  secure-llms.html  societies.html
apps/bam-blog-demo/public/: style.css  theme.js
apps/bam-blog-demo/src/: posts.ts  vite-env.d.ts
apps/bam-blog-demo/src/widget/: codec.ts  content-tag.ts  eth.ts  index.ts  post-id.ts  poster-reader.ts  render.ts  thread.ts  typed-data.ts  widget.css
apps/bam-blog-demo/test/: codec.test.ts  content-tag.test.ts  embed-snippet.test.ts  eth.test.ts  post-fixtures.test.ts  post-id.test.ts  thread.test.ts  typed-data-parity.test.ts
apps/bam-coprocessor/: .gitignore  CIRCUIT2.md  Cargo.toml  README.md  REDESIGN.md
apps/bam-coprocessor-demo/: .gitignore  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/bam-coprocessor-demo/public/: proof.json
apps/bam-coprocessor-demo/public/proofs/: index.json  proof_10932896.json
apps/bam-coprocessor-demo/public/verifier/: package.json  sp1_wasm_verifier.d.ts  sp1_wasm_verifier.js  sp1_wasm_verifier_bg.wasm  sp1_wasm_verifier_bg.wasm.d.ts
apps/bam-coprocessor-demo/src/: main.ts  style.css
apps/bam-coprocessor-demo/verifier-wasm/: Cargo.toml
apps/bam-coprocessor-demo/verifier-wasm/src/: lib.rs
apps/bam-coprocessor/lib/: Cargo.toml
apps/bam-coprocessor/lib/src/: lib.rs
apps/bam-coprocessor/program-app/: Cargo.toml
apps/bam-coprocessor/program-app/src/: main.rs
apps/bam-coprocessor/program-reader/: Cargo.toml
apps/bam-coprocessor/program-reader/src/: main.rs
apps/bam-coprocessor/script/: Cargo.toml  build.rs  fetch-blobs.py
apps/bam-coprocessor/script/src/: blob_fetch.rs  kzg.rs  lib.rs  pipeline.rs  reader_api.rs  sp1_runner.rs
apps/bam-coprocessor/script/tests/: circuit_e2e.rs
apps/bam-coprocessor/service/: Cargo.toml  README.md  build.rs
apps/bam-coprocessor/service/src/: config.rs  main.rs  state.rs
apps/bam-coprocessor/service/src/db/: ddl.rs  mod.rs  queries.rs  schema.sql
apps/bam-coprocessor/service/src/http/: health.rs  json.rs  mod.rs  proof_get.rs  proof_list.rs  proof_vk.rs  validation.rs
apps/bam-coprocessor/service/src/jobs/: mod.rs  proof.rs  recovery.rs  validation.rs
apps/bam-explorer/: .env.local.example  README.md  next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
apps/bam-explorer/src/app/: layout.tsx  page.tsx
apps/bam-explorer/src/components/: BatchDetailCard.tsx  BatchDetailView.tsx  Dashboard.tsx  DegradedBody.tsx  EndpointLabel.tsx  Freshness.tsx  PanelShell.tsx  PosterHealthPanel.tsx  PosterPendingPanel.tsx  PosterStatusPanel.tsx  PosterSubmittedBatchesPanel.tsx  ReaderBatchesPanel.tsx  ReaderHealthPanel.tsx  SettingsPanel.tsx  (+2 more)
apps/bam-explorer/test/: Freshness.test.tsx  SettingsPanel.test.tsx  StatusBadge.test.tsx  batch-detail.test.tsx  client-config.test.tsx  config.test.ts  dashboard.test.tsx  decode-text.test.ts  fetchers.test.ts  fixtures.ts  page.test.tsx  panel-result.test.ts  poster-client.test.ts  poster-panels.test.tsx  reader-client.test.ts  reader-panels.test.tsx
apps/bam-forum-demo/: .env.local.example  index.html  next.config.mjs  package.json  style.css  tailwind.config.ts  thread.html  vercel.json  vitest.config.ts
apps/bam-indexer/: .gitignore  README.md  package.json  tsconfig.json
apps/bam-indexer/src/: chain-fetcher.ts  constants.ts  index.ts  pipeline.ts  twitter-codec.ts
apps/bam-landing/: index.html  package.json  style.css
apps/bam-sdk-test/: README.md  next.config.mjs  package.json  tailwind.config.ts  vercel.json
apps/bam-sdk-test/scripts/: sync-assets.mjs
apps/bam-sp1/: Cargo.toml  README.md
apps/bam-sp1/benchmark/: Cargo.toml
apps/bam-sp1/benchmark/src/: main.rs
apps/bam-sp1/lib/: Cargo.toml
apps/bam-sp1/program/: Cargo.toml
apps/bam-sp1/program-kzg-internal/: Cargo.toml
apps/bam-sp1/script/: Cargo.toml  build.rs
apps/bam-twitter/: .env.local.example  .gitignore  README.md  next.config.mjs  package.json  tailwind.config.ts  vercel.json
apps/exposure-demo/: .env.local.example  README.md  next.config.mjs  package.json  tailwind.config.ts
apps/message-in-a-blobble/: .env.local.example  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
apps/message-in-a-blobble/scripts/: audit-bundle.mjs
data/corpora/: synthetic.json
data/dictionaries/: v1_validation.json
docker/: entrypoint.sh
docs/design/: bam-comments-widget-prompt.md  comment-section.md  indexer.md  info-rollup.md  nonce-scope.md  waku-broadcast.md
docs/research/: Status of Long Term Blob Storage.md  [WIP]SocialBlobsArchitecture.md  long-term-blob-storage.md
docs/specs/: erc-8180.md
scripts/: check-browser-reach.mjs  fly-deploy.sh  fly-set-secrets.sh  lint-fe-constants.sh  save-deployment.ts  sync-abis.ts  sync-deployments.ts
specs/erc-blob-authenticated-messaging/: erc-draft.md
specs/erc-shared-blob-segments/: erc-draft.md
(+158 files in other folders)
