[workspace]
members = ["lib", "program-reader", "script"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10", default-features = false }
tiny-keccak = { version = "2.0", features = ["keccak"] }
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "alloc"] }
