[package]
name = "bam-app-program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm            = { version = "6.0.1", features = ["verify"] }
bam-coprocessor-lib = { path = "../lib" }
sha2                = { workspace = true }
tiny-keccak         = { workspace = true }
hex-literal         = "0.4"
