[package]
name = "bam-coprocessor-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bam-coprocessor-service"
path = "src/main.rs"

[dependencies]
bam-coprocessor-lib    = { path = "../lib" }
bam-coprocessor-script = { path = "../script" }

# Async runtime + HTTP.
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
axum        = "0.7"
tower       = "0.5"
tower-http  = { version = "0.6", features = ["trace"] }

# Scheduling.
tokio-cron-scheduler = "0.11"

# Postgres via sqlx with rustls TLS (matches reader/indexer posture).
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "json",
    "macros",
] }

# SP1 (matches script crate pin).
sp1-sdk      = { version = "6.0.1", features = ["network"] }
sp1-verifier = { version = "=6.1.0", default-features = false }

# HTTP client (separate from script's blocking ureq client).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialisation, encoding, logging.
serde              = { workspace = true }
serde_json         = { workspace = true }
hex                = "0.4"
base64             = "0.22"
chrono             = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

anyhow    = "1"
thiserror = "1"
dotenvy   = "0.15"

[build-dependencies]
sp1-build = { version = "6.0.1" }
