[package]
name = "bam-twitter-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { version = "6.0.1" }
# bls12_381 0.7.1 is already in the workspace lockfile (pulled in by sp1-sdk).
# We depend on it directly here so the guest can call pairing().
# SP1 v6 has G1 add/double precompiles but no native pairing precompile —
# the Miller loop and final exponentiation run in pure software.
bls12_381 = { version = "0.7", features = ["pairings"] }
